2012-07-20  Philippe Normand  <pnormand@igalia.com>

        [GTK][jhbuild] Switch to GStreamer 0.11 build
        https://bugs.webkit.org/show_bug.cgi?id=91727

        Reviewed by Gustavo Noronha Silva.

        Switch build-webkit --gtk to GStreamer 0.11 support and build the
        necessary GStreamer git modules from JHBuild.

        * Scripts/webkitdirs.pm:
        (buildAutotoolsProject): Build WebKit with GStreamer 0.11 support.
        * gtk/jhbuild.modules: GStreamer build support.

2012-07-20  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Proxy configuration should honor the no_proxy environment variable
        https://bugs.webkit.org/show_bug.cgi?id=91747

        Reviewed by Kenneth Rohde Christiansen.

        Add ProxyResolverSoup to the list of classes that contain GObjects
        in style checker script so that it does not complain about naming
        convention issues that are mandated by GObject.

        * Scripts/webkitpy/style/checker.py:

2012-07-20  Zeno Albisser  <zeno@webkit.org>

        [Qt][WK2] Add configure tests for Xrender and GLX.
        https://bugs.webkit.org/show_bug.cgi?id=91845

        GraphicsSurface on linux requires Xcomposite, Xrender
        and GLX. If any of these requirements is not met,
        we should disable GraphicsSurface.

        Reviewed by Kenneth Rohde Christiansen.

        * qmake/config.tests/glx/glx.cpp: Added.
        (main):
        * qmake/config.tests/glx/glx.pro: Added.
        * qmake/config.tests/libXrender/libXrender.cpp: Added.
        (main):
        * qmake/config.tests/libXrender/libXrender.pro: Added.
        * qmake/configure.pri:
        * qmake/mkspecs/features/features.prf:

2012-07-20  Kangil Han  <kangil.han@samsung.com>

        [EFL][WK2][WTR] Implement EventSenderProxy
        https://bugs.webkit.org/show_bug.cgi?id=91731

        Reviewed by Kentaro Hara.

        This is an initial EFL port implementation of EventSenderProxy.
